--- a/styles/config.css
+++ b/styles/config.css
@@ -1,5 +1,5 @@
 #config-overlay {
-    text-align: center;
+  text-align: center;
 }
 
 #config-overlay h2 {
@@ -21,4 +21,45 @@
   width: 15rem;
   padding: 0.3rem;
   border-radius: 5px;
+}
+
+#game-config {
+  width: 90%;
+  max-width: 40rem;
+  margin: 3rem auto;
+  text-align: center;
+}
+
+#game-config ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+#game-config li {
+  margin: 1rem;
+  padding: 1rem;
+  width: 50%;
+  background-color: rgb(243, 247, 255);
+  border-radius: 5px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+
+#game-config h2 {
+  font-size: 1rem;
+  margin: 0.5rem 0;
+}
+
+#game-config h3 {
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+  color: #5762ff;
+}
+
+.player-symbol {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #1a1f6e;
+  margin: 0.5rem 0;
 }
